# fbw-a32nx-mcdu

./: .gitignore  Cargo.toml  test_message.json
src/: main.rs
src/plugins/: mod.rs
src/plugins/screen/: components.rs  mod.rs  systems.rs  systems_utils.rs
src/plugins/server/: mod.rs  systems.rs
src/utils/: graph.rs
