[package]
name = "fbw-a32nx-mcdu"
version = "0.1.0"
authors = ["andycodesstuff"]
edition = "2021"
description = "A physical replica of the A320neo's MCDU compatible with FlyByWire's A32NX mod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
bevy-inspector-egui = "0.11.0"
regex = "1.5.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-segmentation = "1.9.0"
uuid = { version = "1.1.1", features = ["v4"] }
